--- a/Frontend/CCCTest/src/app/Shared/data-table/data-table/data-table.component.html
+++ b/Frontend/CCCTest/src/app/Shared/data-table/data-table/data-table.component.html
@@ -9,7 +9,12 @@
     <ng-container *ngFor="let column of displayedColumns">
       <ng-container *ngIf="column.name != 'actions'" matColumnDef={{column.name}}>
         <th mat-header-cell *matHeaderCellDef> {{ column.display }} </th>
-        <td mat-cell *matCellDef="let element"> {{ element[column.name] }} </td>
+        <ng-container *ngIf="column.type && column.type == 'date'; else notDateField">
+          <td mat-cell *matCellDef="let element"> {{ element[column.name] | date : 'dd/MM/yyyy'}} </td>
+        </ng-container>
+        <ng-template #notDateField>
+          <td mat-cell *matCellDef="let element"> {{ element[column.name]}}  </td>
+        </ng-template>
       </ng-container>
       <ng-container *ngIf="column.name == 'actions'" matColumnDef="actions">
         <th class="actions-header-cell" mat-header-cell *matHeaderCellDef> Actions </th>
@@ -18,18 +23,17 @@
           <ng-container *ngFor="let action of actions">
 
             <a *ngIf='action==0' class="action-margin action-edit" href="javascript:void(0)"
-              (click)="edit(element.id)"><i class="fas fa-edit"></i></a>
+              (click)="edit(element)"><i class="fas fa-edit"></i></a>
 
             <a *ngIf='action==1' class="action-remove" href="javascript:void(0)" (click)="delete(element)"><i
                 class="far fa-trash-alt"></i></a>
-            <a *ngIf='action== 2' class="action-check" href="javascript:void(0)"><i class="fas fa-info-circle"></i></a>
+            <!-- <a *ngIf='action==2' class="action-check" href="javascript:void(0)"><i class="fas fa-info-circle"></i></a> -->
           </ng-container>
-
         </td>
       </ng-container>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
     <tr mat-row *matRowDef="let row; columns: columns;"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="5"  showFirstLastButtons></mat-paginator>
 </div>
