--- a/Frontend/CCCTest/src/app/Modules/home/home.component.html
+++ b/Frontend/CCCTest/src/app/Modules/home/home.component.html
@@ -2,9 +2,9 @@
     <mat-toolbar color="primary" class="example-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
       <h1 class="example-app-name">Human Resources App</h1>
-      <span class="material-icons" style="margin-left: 1090px;cursor: pointer;" (click)="logout()">logout</span>
+      <span class="material-icons" style="right:0%; cursor: pointer;" (click)="logout()">logout</span>
     </mat-toolbar>
-  
+
     <mat-sidenav-container class="example-sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
@@ -13,7 +13,7 @@
           <a mat-list-item style="color:white" [routerLink]="nav.Route" *ngFor="let nav of navMenu">{{nav.Title}}</a>
         </mat-nav-list>
       </mat-sidenav>
-  
+
       <mat-sidenav-content>
         <mat-card>
           <router-outlet></router-outlet>
