--- a/Frontend/CCCTest/src/app/Modules/home/home.component.scss
+++ b/Frontend/CCCTest/src/app/Modules/home/home.component.scss
@@ -7,14 +7,17 @@
     left: 0;
     right: 0;
   }
-  
+
 .mat-primary{
   background-color: black !important;
 }
 
   .example-is-mobile .example-toolbar {
+    display: flex;
+    justify-content: space-between;
     position: fixed;
     z-index: 2;
+    width:100%
   }
 
   .nav-element{
@@ -24,23 +27,23 @@
 .mat-nav-list :hover{
   background-color: red;
 }
-  
+
   h1.example-app-name {
     margin-left: 8px;
   }
-  
+
   .example-sidenav-container {
     /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
        causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
     flex: 1;
   }
-  
+
   .example-is-mobile .example-sidenav-container {
     /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
        `<body>` to be our scrolling element for mobile layouts. */
     flex: 1 0 auto;
   }
-  
+
   .mat-sidenav{
     width: 200px;
     min-width: 200px;
@@ -50,3 +53,4 @@
   .mat-card{
     height: 100vh;
   }
+
