--- a/Frontend/CCCTest/src/styles.scss
+++ b/Frontend/CCCTest/src/styles.scss
@@ -2,4 +2,8 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(0, 0, 0);}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: rgb(0, 0, 0) !important;
+}
